Fix: selecting different dates from calendar input shifts out of place

--- a/src/styles/detail-panel.scss
+++ b/src/styles/detail-panel.scss
@@ -59,6 +59,7 @@
   }
   .date {
     display: flex;
+    gap: 10px;
     justify-self: left;
     position: relative;
     top: 2px;
@@ -66,6 +67,7 @@
     input.calendar {
       background-color: rgba(0, 0, 0, 0);
       width: 150px;
+      outline: none;
 
       // &::-webkit-calendar-picker-indicator {
       //   color: rgba(0, 0, 0, 0);
@@ -78,13 +80,12 @@
       //   position: absolute;
       // }
       &::-webkit-calendar-picker-indicator {
+        display: inline-block;
         position: absolute;
-        left: 5%;
+        left: 10%;
       }
       &::-webkit-datetime-edit-fields-wrapper {
-        position: relative;
-        width: fit-content;
-        left: 10%;
+        display: inline-block;
       }
       &::-webkit-datetime-edit {
         position: relative;
